--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -15,9 +15,9 @@
 
       <a href="part2.html"><div class="gallery-parts part2"></div></a>
 
-      <a href=""><div class="gallery-parts part3"></div></a>
+      <a href="part3.html"><div class="gallery-parts part3"></div></a>
 
-      <a href=""><div class="gallery-parts part4"></div></a>
+      <a href="part4.html"><div class="gallery-parts part4"></div></a>
   </div>
 
 
