--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="gallery/gallery.html" class="nav-link">Gallery</a>
+          <a href="gallery/gallery.html" class="nav-link gallery-tab">Gallery</a>
         </li>
 
       </ul>
@@ -106,7 +106,7 @@
           </li>
 
           <li>
-            <a href="gallery/gallery.html">Gallery</a>
+            <a href="gallery/gallery.html" class="gallery-tab">Gallery</a>
           </li>
 
         </ul>
